add file to project

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
           <td>
             <h3>Get In Touch</h3>
             <!-- <p>Get In Touch</p> -->
-            <h4>Address : 177/4 Phon Sub-district KhamMuang District, Kalasin Province, 46180, Thailand  Tel: 099-219-9586 </h4>
-          
+            <h4> Address : 177/4 Phon Sub-district KhamMuang District, Kalasin Province, 46180, Thailand  Tel: 099-219-9586 </h4>
+            <h4>Email: Bu.narakorn@gmail.com</h4>
           </td>
         </tr>
       </table>
